Closed Bug 390487 Opened 17 years ago Closed 17 years ago

mozDrawText default isn't sans-serif

Categories

(Core :: Graphics: Canvas2D, defect)

defect
Not set
minor

Tracking

()

RESOLVED FIXED

People

(Reporter: philip, Assigned: robarnold)

Details

Attachments

(1 file)

User-Agent:       Opera/9.22 (X11; Linux i686; U; en)
Build Identifier: 

From bug 339553, nsCanvasRenderingContext2D::GetCurrentFontStyle() says:

    style.AssignLiteral("12pt sans serif");

which looks for a font named "sans" and then looks for a serif font. It should say:

    style.AssignLiteral("12pt sans-serif");


Reproducible: Always
Attached patch Quick fixSplinter Review
Good catch!
Assignee: nobody → robarnold
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #277556 - Flags: review?(vladimir)
Comment on attachment 277556 [details] [diff] [review]
Quick fix

approved and checked in
Attachment #277556 - Flags: review?(vladimir)
Attachment #277556 - Flags: review+
Attachment #277556 - Flags: approval1.9+
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Flags: in-testsuite?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: