b=390487, typo fix for default canvas text drawing font, r/a=vlad, patch from robarnold